--- a/public/sample/index.html
+++ b/public/sample/index.html
@@ -34,6 +34,9 @@
     #firepad {
       position: absolute; left: 175px; top: 0; bottom: 0; right: 0; height: auto;
     }
+    .firepad {
+      position: initial;
+    }
   </style>
 </head>
 
@@ -63,8 +66,7 @@
       var firepad = Firepad.fromACE(firepadRef, editor, {userId: userId});
 
       //// Create FirepadUserList (with our desired userId).
-      var firepadUserList = FirepadUserList.fromDiv(firepadRef.child('users'),
-          document.getElementById('userlist'), userId);
+      var firepadUserList = FirepadUserList.fromDiv(firepadRef.child('users'), firepad, document.getElementById('userlist'), userId);
 
       //// Initialize contents.
       firepad.on('ready', function() {
