javascriptを別ファイルに

--- a/public/sample/index.html
+++ b/public/sample/index.html
@@ -14,8 +14,10 @@
   <!-- Firepad -->
   <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/0.1.4/firepad.css" />
   <script src="https://cdn.firebase.com/libs/firepad/0.1.4/firepad-min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 
   <script src="firepad-userlist.js"></script>
+  <script src="index.js"></script>
   <link rel="stylesheet" href="firepad-userlist.css" />
 
   <!-- bootstrap  -->
@@ -41,58 +43,11 @@
 </head>
 
 <body>
+  <div class="actions">
+    <button id="evaluate">Evaluate</button>
+  </div>
   <div id="userlist"></div>
   <div id="firepad"></div>
 
-  <script>
-    function init() {
-      //// Initialize Firebase.
-      var firepadRef = getExampleRef();
-      // TODO: Replace above line with:
-      // var ref = new Firebase('<YOUR FIREBASE URL>');
-
-      //// Create ACE
-      var editor = ace.edit("firepad");
-      editor.setTheme("ace/theme/textmate");
-      var session = editor.getSession();
-      session.setUseWrapMode(true);
-      session.setUseWorker(false);
-      session.setMode("ace/mode/javascript");
-
-      // Create a random ID to use as our user ID (we must give this to firepad and FirepadUserList).
-      var userId = Math.floor(Math.random() * 9999999999).toString();
-
-      //// Create Firepad.
-      var firepad = Firepad.fromACE(firepadRef, editor, {userId: userId});
-
-      //// Create FirepadUserList (with our desired userId).
-      var firepadUserList = FirepadUserList.fromDiv(firepadRef.child('users'), firepad, document.getElementById('userlist'), userId);
-
-      //// Initialize contents.
-      firepad.on('ready', function() {
-        if (firepad.isHistoryEmpty()) {
-          firepad.setText('// JavaScript Editing with Firepad!\nfunction go() {\n  var message = "Hello, world.";\n  console.log(message);\n}');
-        }
-      });
-    }
-
-    // Helper to get hash from end of URL or generate a random one.
-    function getExampleRef() {
-      // var ref = new Firebase('https://firepad.firebaseio-demo.com');
-      var ref = new Firebase('https://blazing-heat-3720.firebaseio.com/');
-      var hash = window.location.hash.replace(/#/g, '');
-      if (hash) {
-        ref = ref.child(hash);
-      } else {
-        ref = ref.push(); // generate unique location.
-        window.location = window.location + '#' + ref.name(); // add it as a hash to the URL.
-      }
-      if (typeof console !== 'undefined')
-        console.log('Firebase data: ', ref.toString());
-      return ref;
-    }
-    
-    window.onload = init;
-  </script>
 </body>
 </html>
